<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_photo"
        android:layout_width="400dp"
        android:layout_height="140dp"
        android:src="@drawable/ic_group"
        app:layout_constraintBottom_toTopOf="@id/widget_view"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/widget_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        android:text="@string/logiut_check"
        android:background="@drawable/ic_rectangle_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:textSize="25sp"
        android:background="@drawable/ic_rectangle_login"
        android:text="@string/log_iin"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/widget_view"
        app:layout_constraintEnd_toStartOf="@+id/btn_Register"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/widget_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@drawable/ic_rectangle_2_register"
        android:text="@string/register"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/widget_view"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/btn_login"
        app:layout_constraintTop_toTopOf="@id/widget_view" />


</androidx.constraintlayout.widget.ConstraintLayout>